--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
@@ -38,6 +39,7 @@
     "typescript": "^5.0.3"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.5.0",
     "supertest": "^6.3.3",
