--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.0.0",
     "@clerk/express": "^1.3.56",
+    "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
@@ -24,6 +25,7 @@
     "@types/node": "^18.15.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "amqplib": "^0.10.5",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
