--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.0.0",
     "@clerk/express": "^1.3.56",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.57.1",
+    "@opentelemetry/sdk-node": "^0.200.0",
     "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
