--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "firebase-admin": "^13.2.0",
     "helmet": "^6.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
