--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.57.1",
     "@opentelemetry/sdk-node": "^0.200.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.0",
     "@types/amqplib": "^0.10.7",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -42,7 +43,9 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
     "typeorm": "^0.3.15",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "winston": "^3.17.0",
+    "winston-loki": "^6.1.3"
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
