--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "predockerbuild": "npm run build",
     "dockerbuild": "docker build --platform linux/x86_64 -t echo_be .",
     "predockerTag": "npm run dockerbuild",
-    "dockerTag": "docker tag echo_be:latest 075310388474.dkr.ecr.ap-south-1.amazonaws.com/echo_be:latest",
-    "prepushAws": "npm run dockerTag",
-    "pushAws": "docker push 075310388474.dkr.ecr.ap-south-1.amazonaws.com/echo_be:latest"
+    "dockerTag": "docker tag echo_be:latest asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:latest",
+    "prepushGcp": "npm run dockerTag",
+    "pushGcp": "docker push asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:latest"
   },
   "keywords": [],
   "author": "",
