Update Docker image tagging and pushing in CI workflow
- Modified package.json to allow dynamic versioning for Docker image tagging and pushing to GCP.
- Updated GitHub Actions workflow to pass version input when pushing the Docker image.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,4 +67,4 @@ jobs:
         run: npm i
         
       - name: Push docker image
-        run: npm run pushGcp
+        run: npm run pushGcp -- ${{ github.event.inputs.version }}
