Enhance Docker image versioning and CI workflow
- Updated package.json to utilize the current package version for Docker tagging and pushing.
- Modified GitHub Actions workflow to display and update the package version before pushing the Docker image, ensuring consistency in version handling.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,4 +67,8 @@ jobs:
         run: npm i
         
       - name: Push docker image
-        run: npm run pushGcp -- ${{ github.event.inputs.version }}
+        run: |
+          echo "Current package version: $(npm pkg get version)"
+          npm version ${{ github.event.inputs.version }} --no-git-tag-version
+          echo "Updated package version: $(npm pkg get version)"
+          npm run pushGcp
