--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "predockerbuild": "npm run build",
     "dockerbuild": "docker build --platform linux/x86_64 -t echo_be .",
     "predockerTag": "npm run dockerbuild",
-    "dockerTag": "sh -c 'docker tag echo_be:latest asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:${1:-latest}' --",
+    "dockerTag": "docker tag echo_be:latest asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:$npm_package_version",
     "prepushGcp": "npm run dockerTag",
-    "pushGcp": "sh -c 'docker push asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:${1:-latest}' --"
+    "pushGcp": "docker push asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:$npm_package_version",
+    "test:version": "echo 'Testing version handling:' && echo 'Package version:' $npm_package_version && echo 'Docker tag:' asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:$npm_package_version"
   },
   "keywords": [],
   "author": "",
