Fix deployment command in GitHub Actions workflow
- Updated the Cloud Run deployment command to use a hyphen in the service name, ensuring consistency and correctness in the deployment process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
           echo "$ENV_FILE" >> ./.env
-          gcloud run deploy echo_be \
+          gcloud run deploy echo-be \
             --image asia-south1-docker.pkg.dev/echo-rag/echo/echo_be:${{ github.event.inputs.version }} \
-            --memory=4Gi \
+            --memory=512Mi \
             --cpu=1 \
             --region=asia-south1 \
             --min-instances=0 \
