--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "amqplib": "^0.10.5",
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
