--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.0.0",
     "@clerk/express": "^1.3.56",
+    "@google-cloud/storage": "^7.16.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.57.1",
     "@opentelemetry/sdk-node": "^0.200.0",
