Add version bump step to GitHub Actions workflow
- Introduced a new step in the build workflow to bump the package version based on user input.
- Added logic to compare the current version with the new version and update accordingly, skipping the bump if they are the same.
- Enhanced the workflow to provide feedback on version changes during the build process.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,21 @@ jobs:
       - name: Install dependencies
         run: npm i
         
+      - name: Bump version
+        run: |
+          CURRENT_VERSION=$(npm pkg get version | tr -d '"')
+          NEW_VERSION=${{ github.event.inputs.version }}
+          echo "Current version: $CURRENT_VERSION"
+          echo "New version: $NEW_VERSION"
+          
+          if [ "$CURRENT_VERSION" != "$NEW_VERSION" ]; then
+            echo "Versions differ, updating to $NEW_VERSION"
+            npm version $NEW_VERSION --no-git-tag-version
+            echo "Updated package version: $(npm pkg get version)"
+          else
+            echo "Versions are the same, skipping version bump"
+          fi
+
       - name: Push docker image
         run: |
           echo "Current package version: $(npm pkg get version)"
