Refactor GitHub Actions workflow to simplify Docker image push step
- Removed version logging and version bumping logic from the Docker image push step in the build workflow.
- Streamlined the process by directly invoking the pushGcp command.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,11 +55,7 @@ jobs:
           fi
 
       - name: Push docker image
-        run: |
-          echo "Current package version: $(npm pkg get version)"
-          npm version ${{ github.event.inputs.version }} --no-git-tag-version
-          echo "Updated package version: $(npm pkg get version)"
-          npm run pushGcp
+        run: npm run pushGcp
   create-release:
     needs: ['build']
     runs-on: ubuntu-latest
