Add health check for LLM server and document processing service
- Introduced a new health check endpoint that verifies the status of the LLM server and document processing service.
- Implemented ProxyServerService to check the health of the LLM server via its health endpoint.
- Updated Dockerfile to create an uploads directory.
- Enhanced GitHub Actions workflow to include environment variables for versioning and deployment URLs.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ on:
 
 jobs:
   build:
+    environment:
+      name: 'version-${{ github.event.inputs.version }}'
+      url: 'https://console.cloud.google.com/artifacts/docker/echo-rag/asia-south1/echo/echo_be?authuser=0&project=echo-rag'
     runs-on: ubuntu-latest
     env:
       project: ${{ secrets.PROJECT_ID }}
@@ -57,9 +60,11 @@ jobs:
       - name: Push docker image
         run: npm run pushGcp
   create-release:
+    environment:
+      name: 'version-${{ github.event.inputs.version }}'
+      url: 'https://github.com/EchoRag/echo_be/releases/tag/${{ github.event.inputs.version }}'
     needs: ['build']
     runs-on: ubuntu-latest
-
     steps:
       - name: Check out the code
         uses: actions/checkout@v4
