--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "echo_be",
-  "version": "0.0.2",
+  "version": "0.0.5",
   "description": "Echo Backend Service",
   "main": "dist/server.js",
   "scripts": {
@@ -28,6 +28,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.0.0",
     "@clerk/express": "^1.3.56",
+    "@google-cloud/recaptcha-enterprise": "^6.0.1",
     "@google-cloud/storage": "^7.16.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.57.1",
