Refactor authentication middleware and add tests
- Enhanced the extractUser middleware to handle errors more gracefully and return appropriate 401 responses.
- Introduced comprehensive unit tests for authentication middleware, covering various scenarios including user extraction and error handling.
- Removed outdated project and user service tests, along with the setup file, to streamline the test suite.
- Updated Jest configuration to remove unnecessary setup files.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,3 +42,18 @@ jobs:
             --add-volume-mount=volume=creds,mount-path=/usr/app/creds
         env:
           ENV_FILE: ${{ secrets.APP_ENV }}
+      
+  post-deploy:
+    environment:
+      name: 'version-${{ github.event.inputs.version }}'
+      url: 'https://github.com/EchoRag/echo_be/releases/tag/${{ github.event.inputs.version }}'
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Create release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.event.inputs.version }}
+        run: |
+          gh release edit "$tag" \
+              --latest
