Update GitHub Actions workflow to include Codecov slug
- Added 'slug' parameter to the Codecov action in the CI workflow to specify the repository for coverage reporting, enhancing integration with Codecov.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: EchoRag/echo_be
   build:
     needs: ['test']
     environment:
