Update deploy workflow to set release as non-prerelease
- Modified the GitHub Actions deploy workflow to include the `--prerelease=false` flag when editing releases, ensuring that new releases are marked as stable by default.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,4 +58,5 @@ jobs:
           tag: ${{ github.event.inputs.version }}
         run: |
           gh release edit "$tag" \
-              --latest
+              --latest \
+              --prerelease=false
